--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -78,7 +78,17 @@
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
+    color: #fff;
+    background-color: #5bc0de;
 }
+
+.sidebar-nav > .active >a,
+.sidebar-nav > .active >a:hover,
+.sidebar-nav > .active >a:focus{
+    color: #fff;
+    background-color: #428bca;
+}
+
 
 .sidebar-nav > .sidebar-brand {
     height: 65px;
